maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return 1
           ^WallFollowerMaze:4: warning: enclosing method mur has result type Unit: return value discarded
    return 1
    ^WallFollowerMaze:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return 0
           ^WallFollowerMaze:7: warning: enclosing method mur has result type Unit: return value discarded
    return 0
    ^WallFollowerMaze:14: error: value > is not a member of Unit
    if (mur() > 0.5){
              ^